--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,24 @@
     display: flex;
     flex-direction:column;    
 }
+.loginlogout {
+    height: 30px;
+    background-color: lightgrey;
+    box-shadow: 5px 3px 5px grey;
+    font-family: 'Courier New', Courier, monospace;    
+}
+.loginlogout:hover {
+    background-color: grey;
+    box-shadow: 5px 3px 3px grey;    
+}
+.navtab {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1vw;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;    
+}
+.navtab:hover {
+    text-decoration:underline;   
+}
