--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,8 +6,31 @@
   width: 100%;
   height: 100%;
 }
+*{padding: 0;
+  margin: 0;
+  box-sizing: border-box;}
+  
+  header{
+    margin-top: 0px;
+    width: 100%;
+    height: 35%;
+    padding: 0 20px;
+    background: linear-gradient(to bottom, lightgrey, white);
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .app-container h1 {
   color: var(--red);
   padding: 1rem;
+}
+
+@media only screen and (max-width:870px){
+  ul li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
